--- a/170516/Views/Home/Index.cshtml
+++ b/170516/Views/Home/Index.cshtml
@@ -168,7 +168,7 @@
                                                                 </div>
                                                                 <div class="elements-list clearfix">
                                                                     <span class="price">@product.DiscountedPrice.ToString("N") đ</span>
-                                                                    <a href="#" class="pull-right margin-clear btn btn-sm btn-default-transparent btn-animated">Thêm vào giỏ<i class="fa fa-shopping-cart"></i></a>
+                                                                    <a href="#" class="pull-right margin-clear btn btn-sm btn-default btn-animated">Thêm vào giỏ<i class="fa fa-shopping-cart"></i></a>
                                                                 </div>
                                                             </div>
                                                         </div>
