--- a/170516/Views/Product/ViewCategory.cshtml
+++ b/170516/Views/Product/ViewCategory.cshtml
@@ -31,6 +31,7 @@
                     <div class="container-fluid">
                         <div id="ShowCaseDiv" style="margin-top: 30px;">
                             <div class="row">
+                                <input type="hidden" id="category_id" value="@Model.CategoryId" />
                                 <div class="product-toolbar">
                                     <div class="col-lg-12 product-filter-wrapper">
                                         <span class="main-title-h6">Có @Model.MenuOnMainPage.Count sản phẩm trong danh mục @Model.CategoryName</span>
@@ -38,19 +39,86 @@
                                         {
                                             <div class="btn-group bootstrap-select" id="product_itemNumber_select">
                                                 <select class="selectpicker" tabindex="-98">
-                                                    <option selected="" value="10">10</option>
-                                                    <option value="25">25</option>
-                                                    <option value="50">50</option>
-                                                    <option value="100">100</option>
+                                                    @if (Model.ItemOnPage == 10)
+                                                    {
+                                                        <option selected="" value="10">10</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="10">10</option>
+                                                    }
+                                                    @if (Model.ItemOnPage == 25)
+                                                    {
+                                                        <option selected="" value="25">25</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="25">25</option>
+                                                    }
+                                                    @if (Model.ItemOnPage == 50)
+                                                    {
+                                                        <option selected="" value="50">50</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="50">50</option>
+                                                    }
+                                                    @if (Model.ItemOnPage == 100)
+                                                    {
+                                                        <option selected="" value="100">100</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="100">100</option>
+                                                    }
                                                 </select>
                                             </div>
                                             <div class="btn-group bootstrap-select" id="product_filter_select">
                                                 <select class="selectpicker" tabindex="-98">
-                                                    <option selected="" value="position:asc">Mới nhất</option>
-                                                    <option value="price:asc">Giá thấp nhất</option>
-                                                    <option value="price:desc">Giá cao nhất</option>
-                                                    <option value="name:asc">Tên sản phẩm: A - Z</option>
-                                                    <option value="name:desc">Tên sản phẩm: Z - A</option>
+                                                    @if (Model.SortField.Equals("latest"))
+                                                    {
+                                                        <option selected value="latest">Mới nhất</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="latest">Mới nhất</option>
+                                                    }
+
+                                                    @if (Model.SortField.Equals("priceAsc"))
+                                                    {
+                                                        <option selected value="priceAsc">Giá thấp nhất</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="priceAsc">Giá thấp nhất</option>
+                                                    }
+
+                                                    @if (Model.SortField.Equals("priceDesc"))
+                                                    {
+                                                        <option selected value="priceDesc">Giá cao nhất</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="priceDesc">Giá cao nhất</option>
+                                                    }
+
+                                                    @if (Model.SortField.Equals("nameAsc"))
+                                                    {
+                                                        <option selected value="nameAsc">Tên sản phẩm: A - Z</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="nameAsc">Tên sản phẩm: A - Z</option>
+                                                    }
+
+                                                    @if (Model.SortField.Equals("nameDesc"))
+                                                    {
+                                                        <option selected value="nameDesc">Tên sản phẩm: Z - A</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="nameDesc">Tên sản phẩm: Z - A</option>
+                                                    }
                                                 </select>
                                             </div>
                                         }
@@ -111,23 +179,34 @@
                                 </div>
                                 <div class="product-pagination">
                                     <ul class="pagination book-pagination">
-                                        @for (var i = 0; i < 5; i++)
+                                        @if (Model.CurrentPage - 2 > 0)
                                         {
-                                            if ((Model.CurrentPage + i) <= Model.TotalPage)
-                                            {
-                                                if (i == 0)
-                                                {
-                                                    <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
-                                                        <a href="@Url.Action("ViewProduct", "Administrator", new { page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, sortField = Model.SortField, isAsc = Model.IsAsc })">@((Model.CurrentPage + i).ToString())</a>
-                                                    </li>
-                                                }
-                                                else
-                                                {
-                                                    <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
-                                                        <a href="@Url.Action("ViewProduct", "Administrator", new { page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, sortField = Model.SortField, isAsc = Model.IsAsc })">@((Model.CurrentPage + i).ToString())</a>
-                                                    </li>
-                                                }
-                                            }
+                                            <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
+                                                <a href="@Url.Action("ViewCategory", "Product", new { id=Model.CategoryId, page = Model.CurrentPage - 2, itemsPerPage = Model.ItemOnPage, sortField = Model.SortField })">@(Model.CurrentPage - 2)</a>
+                                            </li>
+                                        }
+                                        @if (Model.CurrentPage - 1 > 0)
+                                        {
+                                            <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
+                                                <a href="@Url.Action("ViewCategory", "Product", new { id = Model.CategoryId, page = Model.CurrentPage - 1, itemsPerPage = Model.ItemOnPage, sortField = Model.SortField })">@(Model.CurrentPage - 1)</a>
+                                            </li>
+                                        }
+
+                                        <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
+                                            <a href="@Url.Action("ViewCategory", "Product", new { id=Model.CategoryId, page = Model.CurrentPage, itemsPerPage = Model.ItemOnPage, sortField = Model.SortField })">@Model.CurrentPage.ToString()</a>
+                                        </li>
+
+                                        @if (Model.CurrentPage + 1 <= Model.TotalPage)
+                                        {
+                                            <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
+                                                <a href="@Url.Action("ViewCategory", "Product", new { id=Model.CategoryId, page = Model.CurrentPage +1, itemsPerPage = Model.ItemOnPage, sortField = Model.SortField })">@(Model.CurrentPage + 1)</a>
+                                            </li>
+                                        }
+                                        @if (Model.CurrentPage + 2 <= Model.TotalPage)
+                                        {
+                                            <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
+                                                <a href="@Url.Action("ViewCategory", "Product", new { id=Model.CategoryId, page = Model.CurrentPage + 2, itemsPerPage = Model.ItemOnPage, sortField = Model.SortField })">@(Model.CurrentPage + 2)</a>
+                                            </li>
                                         }
                                     </ul>
                                 </div>
