--- a/170516/Views/Account/Login.cshtml
+++ b/170516/Views/Account/Login.cshtml
@@ -6,27 +6,29 @@
 
 <div class="container">
     <div class="object-non-visible text-center animated object-visible fadeInDownSmall" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-        <!-- logo -->
-        <div id="logo" class="logo">
-            <h3 class="margin-clear"><a href="index.html" class="logo-font link-light">The <span class="text-default">Project</span></a></h3>
-        </div>
-        <!-- name-and-slogan -->
-        <p class="small">Multipurpose HTML5 Template</p>
+
         <div class="form-block center-block p-30 light-gray-bg border-clear">
-            <h2 class="title text-left">Login</h2>
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal text-left", role = "form" }))
-            {
+            <!-- logo -->
+            <div id="logo" class="logo logo-div">
+                <h3 class="margin-clear">
+                    <a href="@Url.Action("Index","Home")">
+                    </a>
+                </h3>
+            </div>
+            <!-- name-and-slogan -->
+            <p class="small">MEICO COMPANY'S SLOGAN</p>
+            <form class="form-horizontal text-left form-login" role="form" id="LoginForm">
                 @Html.AntiForgeryToken()
 
                 <div class="form-group has-feedback">
-                    <label for="inputUserName" class="col-sm-3 control-label">User Name</label>
+                    <label for="inputUserName" class="col-sm-3 control-label">Địa chỉ Email</label>
                     <div class="col-sm-8">
                         <input type="text" class="form-control" id="Email" name="Email" placeholder="Địa Chỉ Email" required="">
                         <i class="fa fa-user form-control-feedback"></i>
                     </div>
                 </div>
                 <div class="form-group has-feedback">
-                    <label for="inputPassword" class="col-sm-3 control-label">Password</label>
+                    <label for="inputPassword" class="col-sm-3 control-label">Mật khẩu</label>
                     <div class="col-sm-8">
                         <input type="password" class="form-control" id="Password" name="Password" placeholder="Mật Khẩu" required="">
                         <i class="fa fa-lock form-control-feedback"></i>
@@ -39,18 +41,22 @@
                                 <input type="checkbox" id="RememberMe" name="RememberMe" value="remember-me"> Nhớ thông tin đăng nhập
                             </label>
                         </div>
-                        <button type="submit" id="LoginBtn" class="btn btn-group btn-default btn-animated">Đăng Nhập <i class="fa fa-user"></i></button>
+                        <button type="submit" id="LoginBtn" class="btn btn-group btn-default btn-animated" style=" margin-left 61px; margin-top 26px;">
+                            Đăng Nhập <i class="fa fa-user"></i>
+                        </button>
                     </div>
                 </div>
-            }
+            </form>
         </div>
         <!-- .subfooter start -->
         <!-- ================ -->
-        <p class="mt-20">Copyright © 2015 The Project by <a target="_blank" href="#">...</a>. All Rights Reserved</p>
+        <p class="mt-20">Copyright © 2015 by <a target="_blank" class="text-decoration-none" style="color:#B93C49;" href="#">THUAN NGUYEN HOANG</a>. All Rights Reserved</p>
         <!-- .subfooter end -->
     </div>
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+
+    <script src="@Url.Content("~/Scripts/Common/account.js")"></script>
 }
