--- a/170516/Views/Product/ViewProductDetail.cshtml
+++ b/170516/Views/Product/ViewProductDetail.cshtml
@@ -57,6 +57,7 @@
                                         <div class="form-group">
                                             <label>Quantity</label>
                                             <input type="text" id="productInCartQuantity" class="form-control" value="1">
+                                            <span class="input-error-box text-danger"></span>
                                         </div>
                                     </div>
                                     <div class="col-md-4">
